# LabNeura

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  __init__.py  index.html  install_deps.py  requirements.txt  setup.py  styles.css
.github/workflows/: python-package.yml
core/: CMakeLists.txt
core/bindings/: algocpp_interface.cpp  cpp_interface.cpp  mlcpp_interface.cpp
core/include/algorithms/: sorting.h
core/include/ml/: linear_regression.h
core/src/algorithms/: sorting.cpp
core/src/ml/: linear_regression.cpp
labneura/: CMakeLists.txt  __init__.py
labneura/algorithms/: sorting.py
labneura/bindings/: algorithms.h  data.h  interface.cpp  ml.h
labneura/include/algorithms/: avl.h  graph.h
labneura/include/data/: deque.h  forward_list.h  list.h  map.h  queue.h  set.h  stack.h  tensor.h  unordered_map.h  unordered_set.h  vector.h
labneura/include/ml/: gpt2.h  linear_regression.h
labneura/include/utils/: timer.h
labneura/ml/: linear_regression.py
labneura/src/algorithms/: graph.cpp  sorting.cpp
labneura/src/data/: tensor.cpp
labneura/src/ml/: gpt2.cpp  linear_regression.cpp
tests/: __init__.py
tests/tests_cpp/: test_linear_regression.cpp
tests/tests_python/: __init__.py  test_data.py  test_deque.py  test_forward_list.py  test_linear_regression.py  test_list.py  test_set.py  test_sorting.py  test_unordered_set.py  test_vector.py
